increment function add and fully working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Counter App</title>
 </head>
 <body>
-    
+    <div class="container">
+<div class="cNumber">
+    <h1 id="mainNumber">60</h1>
+</div>
+
+<button type="button" id="increment" >Increment</button>
+<button type="button" id="decrement" >Decrement</button>
+<button type="button" id="reset">Reset</button>
+
+
+    </div>
 
 
 
